refactored to create factory

--- a/src/GildedRose.Tests/GildedRose.Tests.csproj
+++ b/src/GildedRose.Tests/GildedRose.Tests.csproj
@@ -67,8 +67,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DexterityVest.cs" />
-    <Compile Include="DexterityVestShould.cs" />
+    <Compile Include="ItemFactoryShould.cs" />
+    <Compile Include="Items\AgedBrieItemShould.cs" />
+    <Compile Include="Items\DexterityVestItemShould.cs" />
     <Compile Include="Items_Processor_Should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
